src/parser/snapshots/enderpy__parser__parser__tests__dict-4.snap
---
source: src/parser/parser.rs
description: "{a: b,\n            c: d,\n                e: f}"
---
Module {
    node: Node {
        start: 0,
        end: 46,
    },
    body: [
        ExpressionStatement(
            Dict(
                Dict {
                    node: Node {
                        start: 0,
                        end: 46,
                    },
                    keys: [
                        Name(
                            Name {
                                node: Node {
                                    start: 1,
                                    end: 2,
                                },
                                id: "a",
                            },
                        ),
                        Name(
                            Name {
                                node: Node {
                                    start: 19,
                                    end: 20,
                                },
                                id: "c",
                            },
                        ),
                        Name(
                            Name {
                                node: Node {
                                    start: 41,
                                    end: 42,
                                },
                                id: "e",
                            },
                        ),
                    ],
                    values: [
                        Name(
                            Name {
                                node: Node {
                                    start: 4,
                                    end: 5,
                                },
                                id: "b",
                            },
                        ),
                        Name(
                            Name {
                                node: Node {
                                    start: 22,
                                    end: 23,
                                },
                                id: "d",
                            },
                        ),
                        Name(
                            Name {
                                node: Node {
                                    start: 44,
                                    end: 45,
                                },
                                id: "f",
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
