src/parser/snapshots/enderpy__parser__parser__tests__list-2.snap
---
source: src/parser/parser.rs
description: "[a,\n            b, c]"
---
Module {
    node: Node {
        start: 0,
        end: 21,
    },
    body: [
        ExpressionStatement(
            List(
                List {
                    node: Node {
                        start: 0,
                        end: 21,
                    },
                    elements: [
                        Name(
                            Name {
                                node: Node {
                                    start: 1,
                                    end: 2,
                                },
                                id: "a",
                            },
                        ),
                        Name(
                            Name {
                                node: Node {
                                    start: 16,
                                    end: 17,
                                },
                                id: "b",
                            },
                        ),
                        Name(
                            Name {
                                node: Node {
                                    start: 19,
                                    end: 20,
                                },
                                id: "c",
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
