src/parser/snapshots/enderpy__parser__parser__tests__named_expression.snap
---
source: src/parser/parser.rs
description: "a := b"
---
Module {
    node: Node {
        start: 0,
        end: 6,
    },
    body: [
        ExpressionStatement(
            NamedExpr(
                NamedExpression {
                    node: Node {
                        start: 0,
                        end: 6,
                    },
                    target: Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                    value: Name(
                        Name {
                            node: Node {
                                start: 5,
                                end: 6,
                            },
                            id: "b",
                        },
                    ),
                },
            ),
        ),
    ],
}
